--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -21,17 +21,16 @@
     "/js/stories.js": "/js/stories.js?id=f5637cea14c47edfa96df7346b724236",
     "/js/portfolio.js": "/js/portfolio.js?id=5f64242a8cccdeb9d0642c9216396192",
     "/js/account-import.js": "/js/account-import.js?id=e1715ad431edffa5b0533f269743af2e",
-    "/js/user_invite.js": "/js/user_invite.js?id=42bc8c98115d5297675d93c507d93107",
-    "/js/admin_invite.js": "/js/admin_invite.js?id=883bf2f76521fc6b31eb1a3d4fb915ff",
+    "/js/invites.js": "/js/invites.js?id=e2d052ffc530cd28c40f73f2154e81ce",
     "/js/landing.js": "/js/landing.js?id=54fff8f302228e942359b8dd085c7861",
     "/js/remote_auth.js": "/js/remote_auth.js?id=1a952303a4e5c6651960a3b92b9f5134",
     "/js/groups.js": "/js/groups.js?id=31c5c8d4bfb76f850dd3d3e98abd724d",
     "/js/group-status.js": "/js/group-status.js?id=bcf12375c4dd1834a5e640e29d65d6f0",
     "/js/group-topic-feed.js": "/js/group-topic-feed.js?id=587c552bb4d1a9f329ac5ed4a5827e61",
-    "/js/manifest.js": "/js/manifest.js?id=e955fe392b9fad3181f9e427eb80d9b4",
+    "/js/manifest.js": "/js/manifest.js?id=50c24ba2f0babcb1cc8ec121843f1ec0",
     "/js/home.chunk.66de3ae24b72e1f7.js": "/js/home.chunk.66de3ae24b72e1f7.js?id=1cbd80a9dac509046e53195934b55608",
     "/js/compose.chunk.958a8c04f623e048.js": "/js/compose.chunk.958a8c04f623e048.js?id=f8aa574e7c73b430e69f0f28939208f5",
-    "/js/post.chunk.08f8a84856307633.js": "/js/post.chunk.08f8a84856307633.js?id=c4546030fe0dfa1bd44c5630ba25c9f3",
+    "/js/post.chunk.83df8aba06047f70.js": "/js/post.chunk.83df8aba06047f70.js?id=bace63109155a471323239d2e3105aeb",
     "/js/profile.chunk.00f58c2ce41d6856.js": "/js/profile.chunk.00f58c2ce41d6856.js?id=b347024725905dc96c36f0dba35911d1",
     "/js/discover~memories.chunk.91719a130199a4ed.js": "/js/discover~memories.chunk.91719a130199a4ed.js?id=4e894c57156126ca2de3888cc1299866",
     "/js/discover~myhashtags.chunk.04b074a171ace894.js": "/js/discover~myhashtags.chunk.04b074a171ace894.js?id=1d32d4ff2a27d7cc7f1ea142b8b167bb",
@@ -64,5 +63,5 @@
     "/css/landing.css": "/css/landing.css?id=b6e73c3924453e3053aff7d192895d8c",
     "/css/profile.css": "/css/profile.css?id=ae4f5db9bb1a89db2ae293d6bde812e3",
     "/css/spa.css": "/css/spa.css?id=041aed9a146db0e74b2cfe3ad8eaf96c",
-    "/js/vendor.js": "/js/vendor.js?id=beb0ca8defd1da0f0a737ec228d4cbbc"
+    "/js/vendor.js": "/js/vendor.js?id=76b27cd4194d2d28df74fb3c464d6ddc"
 }
