fix: remove health check access logging

--- a/docker/rootfs/nginx/docker/templates/etc/nginx/conf.d/default.conf
+++ b/docker/rootfs/nginx/docker/templates/etc/nginx/conf.d/default.conf
@@ -70,6 +70,15 @@ server {
         try_files $uri =404;
     }
 
+    location /api/service/health-check {
+        access_log off;
+        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root/index.php;
+        fastcgi_param QUERY_STRING $query_string;
+    }
+
     location / {
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
