fix: copy git over

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -331,7 +331,8 @@ ARG PHP_VERSION
 ENV PHP_VERSION=${PHP_VERSION}
 
 WORKDIR /var/www/
-RUN git init && git config --global --add safe.directory /var/www && mv /root/.gitconfig /var/www/.gitconfig
+COPY ./.git ./
+RUN git config --global --add safe.directory /var/www && mv /root/.gitconfig /var/www/.gitconfig
 
 EXPOSE 9000
 
@@ -367,6 +368,7 @@ COPY --link --from=nginx-image /docker-entrypoint.d /docker/entrypoint.d/
 COPY docker/rootfs/nginx /
 
 WORKDIR /var/www/
+COPY ./.git ./
 RUN git init && git config --global --add safe.directory /var/www && mv /root/.gitconfig /var/www/.gitconfig
 
 STOPSIGNAL SIGQUIT
